--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
 
+
     <section class="hero">
         <div class="hero-content">
             <h2>El mejor café de la ciudad</h2>
@@ -29,26 +30,65 @@
         </div>
     </section>
 
-    <section class="featured-products">
+<main class="container">
+    <section id="featured-products">
         <h2>Nuestros productos destacados</h2>
-        <div class="product-list">
+        <div id="product-list">
             <div class="product">
-                <img src="images/cafe1.jpg" alt="Café 1">
-                <h3>Café Americano</h3>
-                <p>Un clásico para comenzar el día.</p>
+                <div class="product-card-header">
+                    <h3>Café Americano</h3>
+                    <p> Un clásico para comenzar tu día</p>
+                </div>
+                <div class="product-card-content">
+                    <img src="img/americano.jpg" alt="Americano">
+                </div>
+                <div class="product-card-footer">
+                    <a href="#" class="btn-compra">$40</a>
+                </div>
             </div>
+
             <div class="product">
-                <img src="images/cafe2.jpg" alt="Café 2">
-                <h3>Cappuccino</h3>
-                <p>Espresso con leche cremosa.</p>
+                <div class="product-card-header">
+                    <h3>Capuccino</h3>
+                    <p> Espresso con leche cremosa.</p>
+                </div>
+                <div class="product-card-content">
+                    <img src="img/capuccino.jpg" alt="capuccino">
+                </div>
+                <div class="product-card-footer">
+                    <a href="#" class="btn-compra">$55</a>
+                </div>
             </div>
+            
             <div class="product">
-                <img src="images/cafe3.jpg" alt="Café 3">
-                <h3>Latte Macchiato</h3>
-                <p>Espresso con leche al vapor.</p>
+                <div class="product-card-header">
+                    <h3>Latte Machiatto</h3>
+                    <p> Espresso con leche al vapor</p>
+                </div>
+                <div class="product-card-content">
+                    <img src="img/latte macchiato.jpg" alt="latte">
+                </div>
+                <div class="product-card-footer">
+                    <a href="#" class="btn-compra">$65</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="product-card-header">
+                    <h3>Cold Brew</h3>
+                    <p> Concentrado de café frío</p>
+                </div>
+                <div class="product-card-content">
+                    <img src="img/coldbrew.jpg" alt="cb">
+                </div>
+                <div class="product-card-footer">
+                    <a href="#" class="btn-compra">$65</a>
+                </div>
             </div>
         </div>
     </section>
+
+</main>
 
     <footer>
         <p>&copy; 2023 Mi Cafetería</p>
