--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Cafetería</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,7 +27,7 @@
         <div class="hero-content">
             <h2>El mejor café de la ciudad</h2>
             <p>Disfruta de una experiencia única con nuestros granos seleccionados.</p>
-            <button>Ver Menú</button>
+            <a href="#" id="btn-compra-inicio">Ver Menú</a>
         </div>
     </section>
 
@@ -90,8 +91,20 @@
 
 </main>
 
-    <footer>
-        <p>&copy; 2023 Mi Cafetería</p>
-    </footer>
+<footer>
+    <div class="contenido">
+        <div class="footer-contacto">
+            <h2>Visítanos</h2>
+            <a href="#"><i class="fa-solid fa-phone"></i> (449) 123-4567</a>
+            <a href="#"><i class="fa-solid fa-location-dot"></i> Francisco I. Madero</a>
+            <a href="#"><i class="fa-solid fa-envelope"></i> MiCafetería@example.com</a>
+        </div>
+        <div class="footer-redes">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>            
+        </div>
+    </div>
+</footer>
 </body>
 </html>
