agregué seccion de nosotros y formulario

--- a/index.html
+++ b/index.html
@@ -89,7 +89,53 @@
         </div>
     </section>
 
+    <section class="postres">
+        <h2>Nuestros deliciosos postres</h2>
+        <div class="grid-container">
+            <div class="postre">
+                <img src="" alt="">
+                <h3>banana split</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi, laboriosam suscipit sed distinctio quisquam voluptatem cum provident iure molestias. Quidem facilis maiores eaque impedit itaque natus hic recusandae ullam.</p>
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="postre">
+                <img src="" alt="">
+                <h3>fresas con crema</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi, laboriosam suscipit sed distinctio quisquam voluptatem cum provident iure molestias. Quidem facilis maiores eaque impedit itaque natus hic recusandae ullam.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="equipo">
+        <h2>Nuestro Equipo</h2>
+        <div class="equipo-container">
+            
+            <div class="miembro">
+                <img src="" alt="">
+                <h3>Nombre1</h3>
+                <p>Chef principal</p>
+            </div>
+
+            
+            <div class="miembro">
+                <img src="" alt="">
+                <h3>Nombre2</h3>
+                <p>Barista</p>
+            </div>
+
+        </div>
+    </section>
 </main>
+
+<div class="newsletter">
+    <h3>suscribete</h3>
+    <form action="">
+        <input type="email" placeholder="Ingresa tu correo electronico" required>
+        <button type="submit">Suscribirse</button>
+    </form>
+</div>
 
 <footer>
     <div class="contenido">
