--- a/index.html
+++ b/index.html
@@ -113,29 +113,33 @@
         <div class="equipo-container">
             
             <div class="miembro">
-                <img src="" alt="">
-                <h3>Nombre1</h3>
+                <img src="img/chef principal.jpg" alt="">
+                <h3>Melissa</h3>
                 <p>Chef principal</p>
             </div>
 
             
             <div class="miembro">
-                <img src="" alt="">
-                <h3>Nombre2</h3>
+                <img src="img/redes.jpg" alt="">
+                <h3>Anahí</h3>
+                <p>Redes Sociales</p>
+            </div>
+
+            <div class="miembro">
+                <img src="img/barista.jpg" alt="">
+                <h3>Joel</h3>
                 <p>Barista</p>
+            </div>
+
+            <div class="miembro">
+                <img src="img/repostero.jpg" alt="">
+                <h3>Majo</h3>
+                <p>Repostera</p>
             </div>
 
         </div>
     </section>
 </main>
-
-<div class="newsletter">
-    <h3>suscribete</h3>
-    <form action="">
-        <input type="email" placeholder="Ingresa tu correo electronico" required>
-        <button type="submit">Suscribirse</button>
-    </form>
-</div>
 
 <footer>
     <div class="contenido">
@@ -150,6 +154,14 @@
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>            
         </div>
+    </div>
+
+    <div class="newsletter">
+        <h3>suscribete</h3>
+        <form action="">
+            <input type="email" placeholder="Ingresa tu correo electronico" required>
+            <button type="submit">Suscribirse</button>
+        </form>
     </div>
 </footer>
 </body>
