Agregar menú en nuevo html, y gaps

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Menú</a></li>
+                <li><a href="#" onclick="redirigir('menu.html')" >Menú</a></li>
                 <li><a href="#">Nosotros</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
@@ -164,5 +164,7 @@
         </form>
     </div>
 </footer>
+
+<script src="main.js"></script>
 </body>
 </html>
