agregar galeria de mas fotos y cambiar header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <h1>Mi Cafetería</h1>
+                <img src="img friends/logo central perk.webp" alt="">
             </div>
             <ul class="nav-links">
                 <li><a href="#">Inicio</a></li>
