cambiar formato de bebidas

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="img friends/logo central perk.webp" alt="">
+                <img src="img-friends/logo central perk.webp" alt="">
             </div>
             <ul class="nav-links">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#" onclick="redirigir('menu.html')" >Menú</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#">INICIO</a></li>
+                <li><a href="#" onclick="redirigir('menu.html')" >MENÚ</a></li>
+                <li><a href="#">BEST SELLERS</a></li>
+                <li><a href="#">NOSOTROS</a></li>
+                <li><a href="#">EXPERIENCIAS</a></li>
+                <li><a href="#">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
@@ -25,67 +27,35 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h2>El mejor café de la ciudad</h2>
-            <p>Disfruta de una experiencia única con nuestros granos seleccionados.</p>
-            <a href="#" id="btn-compra-inicio">Ver Menú</a>
+            <img src="img-friends/the friends experience.webp" alt="">
+            <a href="#" id="btn-compra-inicio">VER MENÚ</a>
         </div>
     </section>
 
 <main class="container">
     <section id="featured-products">
-        <h2>Nuestros productos destacados</h2>
+        <h2>THE ONE WITH YOUR FAV BEVERAGES</h2>
         <div id="product-list">
-            <div class="product">
-                <div class="product-card-header">
-                    <h3>Café Americano</h3>
-                    <p> Un clásico para comenzar tu día</p>
-                </div>
-                <div class="product-card-content">
-                    <img src="img/americano.jpg" alt="Americano">
-                </div>
-                <div class="product-card-footer">
-                    <a href="#" class="btn-compra">$40</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <div class="product-card-header">
-                    <h3>Capuccino</h3>
-                    <p> Espresso con leche cremosa.</p>
-                </div>
-                <div class="product-card-content">
-                    <img src="img/capuccino.jpg" alt="capuccino">
-                </div>
-                <div class="product-card-footer">
-                    <a href="#" class="btn-compra">$55</a>
-                </div>
-            </div>
-            
-            <div class="product">
-                <div class="product-card-header">
-                    <h3>Latte Machiatto</h3>
-                    <p> Espresso con leche al vapor</p>
-                </div>
-                <div class="product-card-content">
-                    <img src="img/latte macchiato.jpg" alt="latte">
-                </div>
-                <div class="product-card-footer">
-                    <a href="#" class="btn-compra">$65</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <div class="product-card-header">
-                    <h3>Cold Brew</h3>
-                    <p> Concentrado de café frío</p>
-                </div>
-                <div class="product-card-content">
-                    <img src="img/coldbrew.jpg" alt="cb">
-                </div>
-                <div class="product-card-footer">
-                    <a href="#" class="btn-compra">$65</a>
-                </div>
-            </div>
+            <ul class="bebidas">
+                <li class="card-bebida img1">
+                    <h3 class="card-titulo-hotel">CAFÉ AMERICANO</h3>
+                </li>
+                <li class="card-bebida img2">
+                    <h3 class="card-titulo-hotel">CAPUCCINO</h3>
+                </li>
+                <li class="card-bebida img3">
+                    <h3 class="card-titulo-hotel">COLDBREW</h3>
+                </li>
+                <li class="card-bebida img4">
+                    <h3 class="card-titulo">MATCHA</h3>
+                </li>
+                <li class="card-bebida img5">
+                    <h3 class="card-titulo">TARO</h3>
+                </li>
+                <li class="card-bebida img6">
+                    <h3 class="card-titulo"> <span>LIMONADA DRAGONFRUIT</span></h3>
+                </li>
+            </ul>
         </div>
     </section>
 
