--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Cafetería</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide-core.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/themes/splide-sea-green.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,9 +17,9 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#">INICIO</a></li>
-                <li><a href="#" onclick="redirigir('menu.html')" >MENÚ</a></li>
-                <li><a href="#">BEST SELLERS</a></li>
-                <li><a href="#">NOSOTROS</a></li>
+                <li><a href="#featured-products">MENÚ</a></li>
+                <li><a href="#best-sellers">BEST SELLERS</a></li>
+                <li><a href="#nosotros">NOSOTROS</a></li>
                 <li><a href="#">EXPERIENCIAS</a></li>
                 <li><a href="#">CONTACTO</a></li>
             </ul>
@@ -28,12 +30,15 @@
     <section class="hero">
         <div class="hero-content">
             <img src="img-friends/the friends experience.webp" alt="">
-            <a href="#" id="btn-compra-inicio">VER MENÚ</a>
+            <a href="#"  onclick="redirigir('menu.html')" id="btn-compra-inicio">VER MENÚ</a>
         </div>
     </section>
 
 <main class="container">
     <section id="featured-products">
+        <div id="franja-azul"></div>
+        <div id="franja-roja"></div>
+        <div id="franja-amarilla"></div>
         <h2>THE ONE WITH YOUR FAV BEVERAGES</h2>
         <div id="product-list">
             <ul class="bebidas">
@@ -78,7 +83,45 @@
         </div>
     </section>
 
-    <section class="equipo">
+    <div id="best-sellers">
+        <div class="titulos">
+            <div id="franja-azul"></div>
+            <div id="franja-roja"></div>
+            <div id="franja-amarilla"></div>
+            <div id="titulo"><h3>BEST SELLERS</h3></div>
+            <p>Productos que puedes adquirir en tu próxima visita</p>
+        <section id="galeria" class="splide" aria-label="Splide Basic HTML Example">
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide card card1">
+                        <h3 class="card-titulo">CENTRAL PERK PIN</h3>
+                    </li>
+                    <li class="splide__slide card card3">
+                        <h3 class="card-titulo">CRAP BAG TOTE</h3>
+                    </li>
+                    <li class="splide__slide card card7">
+                        <h3 class="card-titulo">TAZA CENTRAL PERK</h3>
+                    </li>
+                    <li class="splide__slide card card5">
+                        <h3 class="card-titulo">HUGSY</h3>
+                    </li>
+                    <li class="splide__slide card card4">
+                        <h3 class="card-titulo">HOW YOU DOIN' JERSEY</h3>
+                    </li>                    
+                    <li class="splide__slide card card6">
+                        <h3 class="card-titulo">MARCO AMARILLO</h3>
+                    </li>
+                    <li class="splide__slide card card2">
+                        <h3 class="card-titulo">CENTRAL PERK PLAYERA</h3>
+                    </li>                    
+                </ul>
+            </div>
+        </section>
+
+    <section class="equipo" id="nosotros">
+        <div id="franja-azul"></div>
+        <div id="franja-roja"></div>
+        <div id="franja-amarilla"></div>
         <h2>Nuestro Equipo</h2>
         <div class="equipo-container">
             
@@ -135,6 +178,7 @@
     </div>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
