agregue experiencias y footer

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <li><a href="#featured-products">MENÚ</a></li>
                 <li><a href="#best-sellers">BEST SELLERS</a></li>
                 <li><a href="#nosotros">NOSOTROS</a></li>
-                <li><a href="#">EXPERIENCIAS</a></li>
-                <li><a href="#">CONTACTO</a></li>
+                <li><a href="#experiencias-sec">EXPERIENCIAS</a></li>
+                <li><a href="#footer-id">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
@@ -43,22 +43,22 @@
         <div id="product-list">
             <ul class="bebidas">
                 <li class="card-bebida img1">
-                    <h3 class="card-titulo-hotel">CAFÉ AMERICANO</h3>
+                    <h3>CAFÉ AMERICANO</h3>
                 </li>
                 <li class="card-bebida img2">
-                    <h3 class="card-titulo-hotel">CAPUCCINO</h3>
+                    <h3>CAPUCCINO</h3>
                 </li>
                 <li class="card-bebida img3">
-                    <h3 class="card-titulo-hotel">COLDBREW</h3>
+                    <h3>COLDBREW</h3>
                 </li>
                 <li class="card-bebida img4">
-                    <h3 class="card-titulo">MATCHA</h3>
+                    <h3>MATCHA</h3>
                 </li>
                 <li class="card-bebida img5">
-                    <h3 class="card-titulo">TARO</h3>
+                    <h3>TARO</h3>
                 </li>
                 <li class="card-bebida img6">
-                    <h3 class="card-titulo"> <span>LIMONADA DRAGONFRUIT</span></h3>
+                    <h3> <span>LIMONADA DRAGONFRUIT</span></h3>
                 </li>
             </ul>
         </div>
@@ -122,59 +122,122 @@
         <div id="franja-azul"></div>
         <div id="franja-roja"></div>
         <div id="franja-amarilla"></div>
-        <h2>Nuestro Equipo</h2>
+        <h2>NUESTRO EQUIPO</h2>
         <div class="equipo-container">
             
             <div class="miembro">
-                <img src="img/chef principal.jpg" alt="">
-                <h3>Melissa</h3>
-                <p>Chef principal</p>
+                <img src="img/GUNTHER.webp" alt="">
+                <h3>Gunther CP</h3>
+                <p>CENTRAL PERK CEO</p>
             </div>
 
             
             <div class="miembro">
-                <img src="img/redes.jpg" alt="">
-                <h3>Anahí</h3>
-                <p>Redes Sociales</p>
+                <img src="img/richard.png" alt="">
+                <h3>Richard Burke</h3>
+                <p>MANAGER</p>
+            </div>
+        </div>
+
+        <div class="equipo-container">
+            <div class="miembro">
+                <img src="img/rachel.jpg" alt="">
+                <h3>Rachel Green</h3>
+                <p>PEOR MESERA</p>
             </div>
 
             <div class="miembro">
-                <img src="img/barista.jpg" alt="">
-                <h3>Joel</h3>
-                <p>Barista</p>
+                <img src="img/joey.jpg" alt="">
+                <h3>Joey Tribbiani</h3>
+                <p>2do PEOR MESERO</p>
             </div>
-
-            <div class="miembro">
-                <img src="img/repostero.jpg" alt="">
-                <h3>Majo</h3>
-                <p>Repostera</p>
-            </div>
+        </div>
 
         </div>
     </section>
-</main>
 
-<footer>
-    <div class="contenido">
-        <div class="footer-contacto">
-            <h2>Visítanos</h2>
-            <a href="#"><i class="fa-solid fa-phone"></i> (449) 123-4567</a>
-            <a href="#"><i class="fa-solid fa-location-dot"></i> Francisco I. Madero</a>
-            <a href="#"><i class="fa-solid fa-envelope"></i> MiCafetería@example.com</a>
+    <div id="experiencias-sec">
+        <div id="franja-azul"></div>
+        <div id="franja-roja"></div>
+        <div id="franja-amarilla"></div>
+        <h2>ATRÉVETE A PROBAR NUEVAS EXPERIENCIAS</h2>
+    <section id="galeria-2" class="splide" aria-label="Splide Basic HTML Example">
+        <div class="splide__track">
+            <ul class="splide__list">
+                <li class="splide__slide card-experiencias">
+                    <div class="img-expeciencias"><img src="img-friends/best-sellers/logos/cata-de-cafe.jpg" alt=""></div>
+                    <div class="columna-experiencias"> 
+                        <img src="img-friends/best-sellers/logos/logo central perk.jpg" alt=""> 
+                        <div id="franja-amarilla"></div>
+                        <p style="color: black;"></span> Cata de café</p>
+                    </div>
+                </li>
+                <li class="splide__slide card-experiencias">
+                    <div class="img-expeciencias"><img src="img-friends/best-sellers/logos/plan-your-trip.jpg" alt=""></div>
+                    <div class="columna-experiencias"> 
+                        <img src="img-friends/best-sellers/logos/logo friends.jpg" alt=""> 
+                        <div id="franja-amarilla"></div>
+                        <p style="color: black;"></span> Visítanos con tus amigos</p>
+                    </div>
+                </li>
+                <li class="splide__slide card-experiencias">
+                    <div class="img-expeciencias"><img src="img-friends/best-sellers/logos/customes.jpg" alt=""></div>
+                    <div class="columna-experiencias"> 
+                        <img src="img-friends/best-sellers/logos/the friends experience.jpg" alt=""> 
+                        <div id="franja-amarilla"></div>
+                        <p style="color: black;"></span> Conoce los vestuarios</p>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <div class="footer-redes">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>            
-        </div>
+    </section>
     </div>
 
+</main>
+
+<footer id="footer-id">
+    <div class="container-footer">
+        <div class="lista-footer lista-extendida">
+            <ul>
+                <li><a href="#">Pagos</a></li>
+                <li><a href="#">Contáctanos</a></li>
+                <li><a href="#">Agenda Experiencias</a></li>
+            </ul>
+        </div>
+        <div class="lista-footer">
+            <ul>
+                <li><a href="#">Aviso de Privaciadad</a></li>
+                <li><a href="#">Prevención de Fraudes</a></li>
+                <li><a href="#">Sorteos y Promociones</a></li>
+            </ul>
+        </div>
+        <div class="lista-footer">
+            <img src="img-friends/logo central perk.webp" alt="">
+        </div>
+        <div class="lista-footer lista-extendida2">
+            <ul>
+                <li><a href="#"><span>México:</span> 800-366-6600</a></li>
+                <li><a href="#"><span>E.U.A. y Canadá:</span> 1-800-292-9466</a></li>
+                <li><a href="#"><span>Resto del mundo:</span> +52 (322) 1760660</a></li>
+            </ul>
+        </div>
+        <div class="lista-footer">
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-facebook"> </i> Facebook</a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"> </i> Instagram</a></li>
+                <li><a href="#"><i class="fa-brands fa-youtube"> </i> Youtube</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="newsletter">
-        <h3>suscribete</h3>
+        <h3>Suscríbete</h3>
         <form action="">
             <input type="email" placeholder="Ingresa tu correo electronico" required>
             <button type="submit">Suscribirse</button>
         </form>
+    </div>
+    <div class="container-footer-b">
+        <p>&#169 2024 F R I E N D S | Todos los derechos reservados</p>
     </div>
 </footer>
 
