Se agregó video y diseños responsivos en splides

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#">INICIO</a></li>
-                <li><a href="#featured-products">MENÚ</a></li>
+                <li><a href="#featured-products">BEBIDAS</a></li>
                 <li><a href="#best-sellers">BEST SELLERS</a></li>
                 <li><a href="#nosotros">NOSOTROS</a></li>
                 <li><a href="#experiencias-sec">EXPERIENCIAS</a></li>
@@ -31,7 +31,7 @@
     <section class="hero">
         <div class="hero-content">
             <img src="img-friends/the friends experience.webp" alt="">
-            <a href="#"  onclick="redirigir('menu.html')" id="btn-compra-inicio">VER MENÚ</a>
+            <a href="#"  onclick="redirigir('menu.html')" id="btn-compra-inicio">MENÚ ALIMENTOS</a>
         </div>
     </section>
 
@@ -65,23 +65,11 @@
         </div>
     </section>
 
-    <section class="postres">
-        <h2>Nuestros deliciosos postres</h2>
-        <div class="grid-container">
-            <div class="postre">
-                <img src="" alt="">
-                <h3>banana split</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi, laboriosam suscipit sed distinctio quisquam voluptatem cum provident iure molestias. Quidem facilis maiores eaque impedit itaque natus hic recusandae ullam.</p>
-            </div>
+    <section class="video-background">
+        <div class="banner-imagen">
+            <img src="img-friends/wellbe.png" alt="">
         </div>
-
-        <div class="grid-container">
-            <div class="postre">
-                <img src="" alt="">
-                <h3>fresas con crema</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi, laboriosam suscipit sed distinctio quisquam voluptatem cum provident iure molestias. Quidem facilis maiores eaque impedit itaque natus hic recusandae ullam.</p>
-            </div>
-        </div>
+        <video class="background-video" id="video-fondo" playsinline="" muted="" loop="" src="img-friends/TFE-HeaderVideo-Jul24.mp4" autoplay=""></video>
     </section>
 
     <div id="best-sellers">
@@ -138,9 +126,7 @@
                 <h3>Richard Burke</h3>
                 <p>MANAGER</p>
             </div>
-        </div>
 
-        <div class="equipo-container">
             <div class="miembro">
                 <img src="img/rachel.jpg" alt="">
                 <h3>Rachel Green</h3>
@@ -231,7 +217,7 @@
         </div>
     </div>
     <div class="newsletter">
-        <h3>Suscríbete</h3>
+        <h3>Suscríbete a nuestro newsletter!</h3>
         <form action="">
             <input type="email" placeholder="Ingresa tu correo electronico" required>
             <button type="submit">Suscribirse</button>
